# cims

./: .gitignore
csp/: CMakeLists.txt  CspServer.cpp  README_LINUX.md  SipServer.cpp  SipServerPickUp.hpp  SipServerUserAgent.hpp  build_log.txt  csp.xml
csp/log/: 20251217_1.txt  20251226_1.txt
cwrtc/: CMakeLists.txt  H264Decoder.cpp  H264Decoder.h  HttpCallBack.cpp  HttpCallBack.h  RtpThread.cpp  RtpThread.h  RtpThreadArg.hpp  RtpThreadDtls.hpp  Server.cpp  Server.h  UserMap.cpp  UserMap.h  build_log.txt  main.cpp
ext/: alsa-lib-1.2.10.tar.bz2
ext/alsa-lib-1.2.10/: Makefile  Makefile.in  aclocal.m4  config.status  configure  libtool
ext/alsa-lib-1.2.10/alsalisp/: Makefile  Makefile.in
ext/alsa-lib-1.2.10/aserver/: Makefile  Makefile.in  aserver
ext/alsa-lib-1.2.10/aserver/.deps/: aserver.Po
ext/alsa-lib-1.2.10/autom4te.cache/: output.1  output.2  requests  traces.0  traces.2
ext/alsa-lib-1.2.10/doc/: Makefile  Makefile.in
ext/alsa-lib-1.2.10/doc/pictures/: Makefile  Makefile.in
ext/alsa-lib-1.2.10/include/: Makefile  Makefile.in  config.h  config.h.in  config.h.in~
ext/alsa-lib-1.2.10/include/sound/: Makefile  Makefile.in
ext/alsa-lib-1.2.10/include/sound/uapi/: Makefile  Makefile.in
ext/alsa-lib-1.2.10/modules/: Makefile  Makefile.in
ext/alsa-lib-1.2.10/modules/mixer/: Makefile  Makefile.in
ext/alsa-lib-1.2.10/modules/mixer/simple/: Makefile  Makefile.in
ext/alsa-lib-1.2.10/src/: Makefile  Makefile.in  Versions
ext/alsa-lib-1.2.10/src/.deps/: async.Plo  conf.Plo  confeval.Plo  confmisc.Plo  dlmisc.Plo  error.Plo  input.Plo  names.Plo  output.Plo  shmarea.Plo  socket.Plo  userfile.Plo
ext/alsa-lib-1.2.10/src/alisp/: Makefile  Makefile.in
ext/alsa-lib-1.2.10/src/conf/: Makefile  Makefile.in
ext/alsa-lib-1.2.10/src/conf/cards/: Makefile  Makefile.in
ext/alsa-lib-1.2.10/src/conf/ctl/: Makefile  Makefile.in
ext/alsa-lib-1.2.10/src/conf/pcm/: Makefile  Makefile.in
ext/alsa-lib-1.2.10/src/control/: Makefile  Makefile.in
ext/alsa-lib-1.2.10/src/control/.deps/: cards.Plo  control.Plo  control_empty.Plo  control_ext.Plo  control_hw.Plo  control_plugin.Plo  control_remap.Plo  control_shm.Plo  control_symbols.Plo  ctlparse.Plo  eld.Plo  hcontrol.Plo  namehint.Plo  setup.Plo  tlv.Plo
ext/alsa-lib-1.2.10/src/hwdep/: Makefile  Makefile.in
ext/alsa-lib-1.2.10/src/hwdep/.deps/: hwdep.Plo  hwdep_hw.Plo
ext/alsa-lib-1.2.10/src/mixer/: Makefile  Makefile.in
ext/alsa-lib-1.2.10/src/mixer/.deps/: bag.Plo  mixer.Plo  simple.Plo  simple_abst.Plo  simple_none.Plo
ext/alsa-lib-1.2.10/src/pcm/: Makefile  Makefile.in
ext/alsa-lib-1.2.10/src/pcm/.deps/: interval.Plo  mask.Plo  pcm.Plo  pcm_adpcm.Plo  pcm_alaw.Plo  pcm_asym.Plo  pcm_copy.Plo  pcm_direct.Plo  pcm_dmix.Plo  pcm_dshare.Plo  pcm_dsnoop.Plo  pcm_empty.Plo  pcm_extplug.Plo  pcm_file.Plo  pcm_generic.Plo  pcm_hooks.Plo  pcm_hw.Plo  pcm_iec958.Plo  pcm_ioplug.Plo  pcm_ladspa.Plo  pcm_lfloat.Plo  pcm_linear.Plo  pcm_meter.Plo  pcm_misc.Plo  pcm_mmap.Plo  pcm_mmap_emul.Plo  pcm_mulaw.Plo  pcm_multi.Plo  pcm_null.Plo  pcm_params.Plo  pcm_plug.Plo  pcm_plugin.Plo  pcm_rate.Plo  pcm_rate_linear.Plo  pcm_route.Plo  pcm_share.Plo  pcm_shm.Plo  pcm_simple.Plo  pcm_softvol.Plo  pcm_symbols.Plo
ext/alsa-lib-1.2.10/src/pcm/scopes/: Makefile  Makefile.in
ext/alsa-lib-1.2.10/src/rawmidi/: Makefile  Makefile.in
ext/alsa-lib-1.2.10/src/rawmidi/.deps/: rawmidi.Plo  rawmidi_hw.Plo  rawmidi_virt.Plo  ump.Plo
ext/alsa-lib-1.2.10/src/seq/: Makefile  Makefile.in
ext/alsa-lib-1.2.10/src/seq/.deps/: seq.Plo  seq_event.Plo  seq_hw.Plo  seq_midi_event.Plo  seq_old.Plo  seqmid.Plo
ext/alsa-lib-1.2.10/src/timer/: Makefile  Makefile.in
ext/alsa-lib-1.2.10/src/timer/.deps/: timer.Plo  timer_hw.Plo  timer_query.Plo  timer_query_hw.Plo
ext/alsa-lib-1.2.10/src/topology/: Makefile  Makefile.in
ext/alsa-lib-1.2.10/src/topology/.deps/: builder.Plo  channel.Plo  ctl.Plo  dapm.Plo  data.Plo  decoder.Plo  elem.Plo  log.Plo  ops.Plo  parser.Plo  pcm.Plo  save.Plo  text.Plo
ext/alsa-lib-1.2.10/src/ucm/: Makefile  Makefile.in
ext/alsa-lib-1.2.10/src/ucm/.deps/: main.Plo  parser.Plo  ucm_cond.Plo  ucm_exec.Plo  ucm_include.Plo  ucm_regex.Plo  ucm_subs.Plo  utils.Plo
ext/alsa-lib-1.2.10/test/: Makefile  Makefile.in
ext/alsa-lib-1.2.10/test/lsb/: Makefile  Makefile.in
ext/alsa-lib-1.2.10/utils/: Makefile  Makefile.in  alsa-lib.spec  alsa-topology.pc  alsa.pc
ext/alsa-lib-build/lib/pkgconfig/: alsa.pc
ext/psip/: CMakeLists.txt  README.md  build_master_log.txt  build_master_log_2.txt  build_master_log_3.txt  build_master_log_4.txt  build_master_log_5.txt  build_master_log_6.txt  build_master_log_7.txt  build_master_log_final.txt  build_sipclient.txt  build_sipclient_alsa.txt  build_sipclient_final.txt  build_sipclient_final_v2.txt  build_sipclient_final_v3.txt  build_sipclient_final_v4.txt  build_sipclient_final_v5.txt  config_log.txt  config_log_2.txt
ext/psip/SipClient/: RtpThread.cpp  RtpThreadRecv.hpp  RtpThreadSend.hpp  SipClient.xml
ext/psip/SipParser/: SipMessage.cpp  SipStatusCode.cpp  SipStatusCode.h
ext/psip/SipPlatform/: SipPlatformDefine.h  SipUdp.h
ext/psip/SipStack/: SipUdpThread.cpp
ext/psip/SipUserAgent/: SipUserAgentSend.hpp
ext/psip/TestWebRtcVideo/: CMakeLists.txt  build_log.txt  main_linux.cpp
ext/psip/TestWebRtcVideo/build_linux/: CMakeCache.txt  Makefile  TestWebRtcVideo  cmake_install.cmake
ext/psip/build_master/: CMakeCache.txt  EchoSipServer  Makefile  SimpleSipServer  SipClient  SipLoadBalancer  SipSpeedLinux  cmake_install.cmake  stC3RB3c  striwRF7
ext/psip/opensrtp/crypto/cipher/: aes_icm.c
